<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/family"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/school"
            android:title="@string/menu_school" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/job"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/game"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/footbaal"
            android:title="@string/menu_football" />
    </group>
</menu>